// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render INTEGER_CONTROL correctly with default value to empty 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "INTEGER_CONTROL",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Integer only"
    value=""
  >
    <styled.div>
      <div
        className="kdCvHd"
      >
        <Input
          kind="primary"
          onChange={[Function]}
          placeholder="Integer only"
          type="number"
          value=""
        >
          <input
            className="jWbJOn"
            kind="primary"
            onChange={[Function]}
            placeholder="Integer only"
            type="number"
            value=""
          />
        </Input>
        <styled.div>
          <div
            className="kGGPNo"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="gVViGF"
                  onClick={[Function]}
                >
                  <div
                    className="gVViGF"
                    onClick={[Function]}
                  >
                    <styled.a
                      color="primary"
                    >
                      <a
                        className="enrdWE"
                        color="primary"
                      >
                        <IconDelete
                          size="1em"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 24 24"
                            width="1em"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                            />
                          </svg>
                        </IconDelete>
                        Clear
                      </a>
                    </styled.a>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              block={false}
              component="button"
              kind="primary"
              onClick={[Function]}
            >
              <BaseComponent
                block={false}
                className="fqCsyW"
                component="button"
                kind="primary"
                onClick={[Function]}
              >
                <button
                  className="fqCsyW"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ControlNumber>
</DataChannelAdapter>
`;

exports[`should render INTEGER_CONTROL correctly with unit 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "unit": "攝氏",
      },
      "id": "id",
      "type": "INTEGER_CONTROL",
      "values": Object {
        "value": 1,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Integer only"
    unit="單位：攝氏"
    value={1}
  >
    <styled.div>
      <div
        className="kdCvHd"
      >
        <Styled(Component)
          color="grayBase"
        >
          <Component
            className="dFZeAf"
            color="grayBase"
          >
            <p
              className="dFZeAf"
              color="grayBase"
            >
              單位：攝氏
            </p>
          </Component>
        </Styled(Component)>
        <Input
          kind="primary"
          onChange={[Function]}
          placeholder="Integer only"
          type="number"
          value={1}
        >
          <input
            className="jWbJOn"
            kind="primary"
            onChange={[Function]}
            placeholder="Integer only"
            type="number"
            value={1}
          />
        </Input>
        <styled.div>
          <div
            className="kGGPNo"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="gVViGF"
                  onClick={[Function]}
                >
                  <div
                    className="gVViGF"
                    onClick={[Function]}
                  >
                    <styled.a
                      color="primary"
                    >
                      <a
                        className="enrdWE"
                        color="primary"
                      >
                        <IconDelete
                          size="1em"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 24 24"
                            width="1em"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                            />
                          </svg>
                        </IconDelete>
                        Clear
                      </a>
                    </styled.a>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              block={false}
              component="button"
              kind="primary"
              onClick={[Function]}
            >
              <BaseComponent
                block={false}
                className="fqCsyW"
                component="button"
                kind="primary"
                onClick={[Function]}
              >
                <button
                  className="fqCsyW"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ControlNumber>
</DataChannelAdapter>
`;

exports[`should render INTEGER_CONTROL correctly with value 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "INTEGER_CONTROL",
      "values": Object {
        "value": 1,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Integer only"
    value={1}
  >
    <styled.div>
      <div
        className="kdCvHd"
      >
        <Input
          kind="primary"
          onChange={[Function]}
          placeholder="Integer only"
          type="number"
          value={1}
        >
          <input
            className="jWbJOn"
            kind="primary"
            onChange={[Function]}
            placeholder="Integer only"
            type="number"
            value={1}
          />
        </Input>
        <styled.div>
          <div
            className="kGGPNo"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="gVViGF"
                  onClick={[Function]}
                >
                  <div
                    className="gVViGF"
                    onClick={[Function]}
                  >
                    <styled.a
                      color="primary"
                    >
                      <a
                        className="enrdWE"
                        color="primary"
                      >
                        <IconDelete
                          size="1em"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 24 24"
                            width="1em"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                            />
                          </svg>
                        </IconDelete>
                        Clear
                      </a>
                    </styled.a>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              block={false}
              component="button"
              kind="primary"
              onClick={[Function]}
            >
              <BaseComponent
                block={false}
                className="fqCsyW"
                component="button"
                kind="primary"
                onClick={[Function]}
              >
                <button
                  className="fqCsyW"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ControlNumber>
</DataChannelAdapter>
`;

exports[`should render INTEGER_CONTROL correctly with zero 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "INTEGER_CONTROL",
      "values": Object {
        "value": 0,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Integer only"
    value={0}
  >
    <styled.div>
      <div
        className="kdCvHd"
      >
        <Input
          kind="primary"
          onChange={[Function]}
          placeholder="Integer only"
          type="number"
          value={0}
        >
          <input
            className="jWbJOn"
            kind="primary"
            onChange={[Function]}
            placeholder="Integer only"
            type="number"
            value={0}
          />
        </Input>
        <styled.div>
          <div
            className="kGGPNo"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="gVViGF"
                  onClick={[Function]}
                >
                  <div
                    className="gVViGF"
                    onClick={[Function]}
                  >
                    <styled.a
                      color="primary"
                    >
                      <a
                        className="enrdWE"
                        color="primary"
                      >
                        <IconDelete
                          size="1em"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 24 24"
                            width="1em"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                            />
                          </svg>
                        </IconDelete>
                        Clear
                      </a>
                    </styled.a>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              block={false}
              component="button"
              kind="primary"
              onClick={[Function]}
            >
              <BaseComponent
                block={false}
                className="fqCsyW"
                component="button"
                kind="primary"
                onClick={[Function]}
              >
                <button
                  className="fqCsyW"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ControlNumber>
</DataChannelAdapter>
`;
